# DanesEsTraductorcmasmas

./: .gitignore  CAMBIOS_APLICADOS.md  CHANGELOG_CORRECCIONES.md  COMO_USAR.md  NLLB_CTRANSLATE2_FUNCIONANDO.md  README.md  RESUMEN_FINAL.md  SOLUCION_DEFINITIVA.md  SOLUCION_FINAL.bat  SOLUCION_FINAL_GUI.bat  SOLUCION_INMEDIATA.bat  SOLUCION_MODELO_GUI.md  SOLUCION_NLLB_CTRANSLATE2.bat  SOLUCION_QT_PLUGINS.md  SOLUCION_TRADUCCION_REAL.bat  build_clean.bat  diagnostico_traductor.bat  ejecutar_cli.bat  ejecutar_gui.bat  ejecutar_gui_corregido.bat  ejecutar_rest.bat  ejecutar_traductor.bat  test_input.txt  test_traduccion.txt  test_translation.cpp  verificar_instalacion.bat
cpp/: CMakeLists.txt  README.md  build.bat  build.sh  test_glossary_standalone.cpp  vcpkg.json
cpp/assets/: config.json  glossary.json  glossary.txt
cpp/build_new/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
cpp/cli/: CMakeLists.txt  main.cpp
cpp/core/: CMakeLists.txt  Config.cpp  Config.h  Glossary.cpp  Glossary.h  LRUCache.cpp  LRUCache.h  PostprocessDA.cpp  PostprocessDA.h  PostprocessES.cpp  PostprocessES.h  Segmenter.cpp  Segmenter.h  Tokenizer.cpp  Tokenizer.h  Tokenizer_simple.cpp  TranslatorEngine.cpp  TranslatorEngine.h  TranslatorEngine_simple.cpp
cpp/desktop_qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
cpp/rest_drogon/: CMakeLists.txt  main.cpp
cpp/tests/: CMakeLists.txt  test_glossary.cpp  test_lru_cache.cpp  test_postprocess.cpp  test_segmenter.cpp  test_translator_engine.cpp
